infra/dev/client-dev-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: dev-client-deployment
spec:
  selector:
    matchLabels:
      app: dev-client
  template:
    metadata:
      labels:
        app: dev-client
    spec:
      containers:
        - name: dev-group-video-chat-client
          image: gcr.io/group-video-chat/dev-group-video-chat-client
          resources:
            limits:
              memory: "2000Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dev-client-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: dev-client
  ports:
    - port: 80
      name: dev-client
      protocol: TCP
      targetPort: 80
