infra/dev/dev-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: development
  name: dev-deployment
spec:
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: dev-group-video-chat
          image: gcr.io/group-video-chat/dev-group-video-chat
---
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: development
spec:
  type: ClusterIP
  selector:
    app: dev
  ports:
    - port: 8000
      name: dev
      protocol: TCP
      targetPort: 8000
