infra/dev/dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: development
  name: dev-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.global-static-ip-name: dev-ip
    nginx.org/websocket-services: dev-service
  labels:
    app: group-video-chat
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: dev-service
              servicePort: 8000
          - path: /?(.*)
            backend:
              serviceName: dev-client-service
              servicePort: 8000
